--- a/scss/sections/_main.scss
+++ b/scss/sections/_main.scss
@@ -8,21 +8,18 @@
 }
 
 .section {
-	grid-template-rows: min-content min-content;
-	gap: func.em(76, var.$font-size-primary);
+	gap: func.em(40, var.$font-size-primary);
 	max-width: func.em(420, var.$font-size-primary);
-	margin: func.em(40, var.$font-size-primary) 0
-		func.em(60, var.$font-size-primary);
-}
-
-.section__head {
-	padding-top: func.em(40, var.$font-size-primary);
+	margin: func.em(50, var.$font-size-primary) 0
+		func.em(40, var.$font-size-primary);
 }
 
 @media (min-width: 48em) {
 	.section {
 		gap: func.em(60, var.$font-size-primary);
 		max-width: func.em(1110, var.$font-size-primary);
+		margin: func.em(70, var.$font-size-primary) 0
+		func.em(60, var.$font-size-primary);
 	}
 
 	.section__head {
